fixed spacing with comment icons

--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -33,4 +33,5 @@
 
   .comment-icons img {
       justify-content: space-between;
+      padding: 10px;
   }
